# rad-agent-toolkit

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  INSTALL.md  LICENSE.md  README.md  README_ACTION.md  TODO.md  convert_md_to_html.py  extract_tools.py  rad-fusion-architecture.md  test_file_commands.py  test_specific_commands.py  vendor-mcp-baseline.md
.claude/: settings.json
.claude/commands/: rad-backup.md  rad-harvest.md  rad-health.md  rad-load-manual.md
images_prompt/: 01-hero-one-toolkit-six-agents.md  02-three-artifact-kinds.md  03-three-deployment-modes.md  04-config-anatomy-launch-vs-find.md  05-many-clients-separate-instances.md  06-staged-commit-flow.md  07-execution-gate.md  08-credentials-split.md  09-knowledge-pipeline.md  10-lexical-not-rag.md  11-verification-matrix.md  12-personas.md  13-fresh-clone-journey.md  14-agent-skills-standard.md  15-doc-map.md  README.md
rad-mcp-server/: .gitignore  .mcp.json  INSTALL.md  MCP-CURRENT-ARCHITECTURE.md  MCP-FUTURE-ARCHITECTURE.md  MCP-SKILLS-BUNDLED-ARCHITECTURE.md  MCP-SKILLS-SERVED-ARCHITECTURE.md  README.md  inventory.example.yaml  inventory.yaml
rad-mcp-server/.claude-plugin/: marketplace.json  plugin.json
rad-mcp-server/server/: pyproject.toml
rad-mcp-server/server/rad_mcp/: __init__.py  audit.py  debug_tree_log.py  inventory.py  knowledge.py  server.py  smoke.py
rad-mcp-server/server/rad_mcp/backends/: __init__.py  base.py  snmp.py  ssh.py
rad-mcp-server/server/rad_mcp/drivers/: __init__.py  base.py  etx1p.py  etx2.py  etx2v.py  minid.py  mp1.py  mp4100.py  radcli.py  secflow.py
(+484 files in other folders)
