[project]
name = "rad-mcp"
version = "0.1.0"
description = "MCP server for RAD Data Communications devices (ETX-2 family and beyond)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "netmiko>=4.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
rad-mcp = "rad_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rad_mcp"]
