[project]
name = "rad-mcp"
version = "0.6.0"
description = "MCP server for RAD Data Communications devices (ETX-2 family and beyond)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "netmiko>=4.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pysnmp>=7.1",
]

# Tooling-only extras (scripts/, not the server runtime). Install with:
#   pip install -e ".[tooling]"
[project.optional-dependencies]
tooling = [
    "pymupdf>=1.24",   # scripts/ingest_manual.py — PDF -> manual markdown
]

[project.scripts]
rad-mcp = "rad_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rad_mcp"]
